--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,9 @@
+<% if session[:user_id] == nil %>
+  <p class="emptyStoreMessage">You can look at the catalog in 'All Books' tab, but you have to Login to sell or buy.</p>
+  <h4><%= link_to 'Login', login_path %></h4>
+<% else %>
+
+
 <h1>Listing users</h1>
 <% if notice %>
 <p id="notice"><%= notice %></p>
@@ -26,3 +32,5 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
+
+<% end %>
