--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
-<% if session[:user_id] == nil %>
-  <p class="emptyStoreMessage">You can look at the catalog in 'All Books' tab, but you have to Login to sell or buy.</p>
-  <h4><%= link_to 'Login', login_path %></h4>
+<% if (session[:user_id].email != 'weldemicael.1@osu.edu') || (session[:user_id] == nil) %>
+  <h1 class="emptyStoreMessage">NICE TRY!</h1> 
+  <h2>You're not Authorized!</h2>
 <% else %>
 
 
