More db security

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,11 @@
-<% if (session[:user_id].email != 'weldemicael.1@osu.edu') || (session[:user_id] == nil) %>
+<% if session[:user_id] == nil %>
   <h1 class="emptyStoreMessage">NICE TRY!</h1> 
   <h2>You're not Authorized!</h2>
+
+
+ <% elsif session[:user_id]email != 'weldemicael.1@osu.edu' %>
+        <p class="emptyStoreMessage">You are not admin!</p>
+  	<h4><%= link_to 'Login', login_path %></h4>
 <% else %>
 
 
