--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,14 +1,4 @@
-<% if session[:user_id] == nil %>
-  <h1 class="emptyStoreMessage">NICE TRY!</h1> 
-  <h2>You're not Authorized!</h2>
-
-
- <% elsif session[:user_id]email != 'weldemicael.1@osu.edu' %>
-        <p class="emptyStoreMessage">You are not admin!</p>
-  	<h4><%= link_to 'Login', login_path %></h4>
-<% else %>
-
-<h1>Listing orders</h1>
+<h1>Orders Database:</h1>
 
 <table>
   <thead>
@@ -36,4 +26,3 @@
 
 <%= link_to 'New Order', new_order_path %>
 
-<% end %>
