--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,41 +1,36 @@
-<% if session[:user_id] == nil %>
-  <h1 class="emptyStoreMessage">NICE TRY!</h1> 
-  <h2>You're not Authorized!</h2>
+<h1>Users Database</h1>
 
-
- <% elsif session[:user_id]email != 'weldemicael.1@osu.edu' %>
-        <p class="emptyStoreMessage">You are not admin!</p>
-  	<h4><%= link_to 'Login', login_path %></h4>
+<% if session[:user_id].email != 'weldemicael.1@osu.edu' %>
+        <h1 class="emptyStoreMessage">NICE TRY!</h1> 
+        <h2>You're not Authorized!</h2>
 <% else %>
 
+	<% if notice %>
+	<p id="notice"><%= notice %></p>
+	<% end %>
 
-<h1>Listing users</h1>
-<% if notice %>
-<p id="notice"><%= notice %></p>
-<% end %>
+	<table>
+	  <thead>
+	    <tr>
+	      <th>Email</th>
+	      <th colspan="3"></th>
+	    </tr>
+	  </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+	  <tbody>
+	    <% @users.each do |user| %>
+	      <tr>
+		<td><%= user.email %></td>
+		<td><%= link_to 'Show', user %></td>
+		<td><%= link_to 'Edit', edit_user_path(user) %></td>
+		<td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	      </tr>
+	    <% end %>
+	  </tbody>
+	</table>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+	<br>
 
-<br>
-
-<%= link_to 'New User', new_user_path %>
+	<%= link_to 'New User', new_user_path %>
 
 <% end %>
